tests/compile_failure/src/Core/NotNullObserverPtr.construct_nullptr.fail.cpp
#include <Phi/Core/ObserverPtr.hpp>

int main()
{
    phi::NotNullObserverPtr<int> ptr = nullptr;
}
